# atlas-local-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-3RD-PARTY.txt  README.md  about.hbs  about.toml  build.rs  cliff.toml  deny.toml  dist-workspace.toml  manifest.template.yml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: bump-atlas-cli-min-version.yml  bump-atlas-local-plugin-min-version.yml  ci.yml  dependabot-auto-approve.yml  prepare-release.yml  release.yml  security-audit.yml  sign-windows-binary.yml  sign-zip.yml
src/: args.rs  dependencies.rs  docs-generator.rs  env.rs  formatting.rs  logging.rs  main.rs  models.rs  table.rs
src/args/: cli.rs  mod.rs  search.rs
src/commands/: connect.rs  core.rs  delete.rs  list.rs  logs.rs  mod.rs  setup.rs  start.rs  stop.rs  with_mongodb.rs
src/commands/connectors/: compass.rs  mod.rs  mongosh.rs  vscode.rs
src/commands/search/: create.rs  delete.rs  describe.rs  file_definition.rs  list.rs  mod.rs
src/commands/validators/: deployment_name.rs  image_tag.rs  mdb_version.rs  mod.rs  port.rs  yes_no.rs
src/dependencies/: docker.rs  fs.rs  mod.rs  mongodb.rs
src/interaction/: input.rs  mod.rs  spinner.rs
tests/: dummy-e2e-test.rs  try_cmd.rs
tests/try_cmd/: invocation-methods.md
