[package]
name = "atlas-local"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mongodb/atlas-local-cli/"

[features]
default = []
e2e-tests = []
generate-manifest = []

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.89"
atlas-local = "0.2.0"
bollard = "0.19.4"
clap = { version = "4.5.16", features = ["derive"] }
indicatif = "0.18.3"
inquire = "0.9.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
typed-builder = "0.23.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
bytes = "1.10"
mockall = "0.14.0"
trycmd = "0.15.11"
which = "8.0.0"
