[package]
name = "atlas-local"
version = "0.0.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mongodb/atlas-local-cli/"

[features]
default = []
e2e-tests = []
generate-manifest = []

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.89"
atlas-local = "0.4.0"
bollard = "0.19.4"
clap = { version = "4.5.16", features = ["derive"] }
console = "0.16.2"
duration-str = "0.18.0"
futures = "0.3.31"
indicatif = "0.18.3"
inquire = "0.9.1"
mongodb = "3.5.0"
mongodb-atlas-cli = "0.0.2"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typed-builder = "0.23.2"
url = "2.5.8"
which = "8.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
bytes = "1.10"
futures = "0.3.31"
futures-util = "0.3.31"
mockall = "0.14.0"
trycmd = "0.15.11"
which = "8.0.0"
